# CueDeck

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ai_agent_tool_strategy.md  clippy.toml  governance_rules_detailed.md  graph.md  implementation_techniques.md  test.md  test_list.json  test_mcp_filters.ps1  test_phase5_3.bat  test_search_fixed.json
.cuedeck/: AGENT_README.md
.github/: PULL_REQUEST_TEMPLATE.md
crates/cue_cli/: Cargo.toml
crates/cue_cli/benches/: tui_performance.rs
crates/cue_cli/src/: cmd_graph.rs  cmd_search_stub.txt  main.rs
crates/cue_cli/src/commands/: mod.rs  query.rs  template.rs
crates/cue_cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
crates/cue_cli/src/tui/tabs/: dashboard.rs  graph.rs  mod.rs  tasks.rs
crates/cue_cli/src/tui/widgets/: help.rs
crates/cue_cli/tests/: integration_task_workflow.rs  test_cli_filters.rs  test_commands.rs  test_task_dependencies.rs
crates/cue_common/: Cargo.toml
crates/cue_common/src/: lib.rs  sanitizer.rs  telemetry.rs
crates/cue_core/: Cargo.toml
crates/cue_core/benches/: graph_bench.rs  migration_bench.rs  performance.rs  scan_bench.rs
crates/cue_core/benches/test_data/.cuedeck/docs/: doc000.md  doc004.md  doc016.md  doc018.md  doc019.md  doc020.md  doc023.md  doc027.md  doc028.md  doc029.md  doc031.md  doc038.md  doc040.md  doc058.md  doc060.md  doc064.md  doc066.md  doc073.md  doc077.md  doc084.md  doc085.md  doc088.md  doc089.md  doc097.md  doc099.md
crates/cue_core/benches/test_data/scan_1000_cold/.cue/: metadata.db
crates/cue_core/benches/test_data/scan_1000_cold/.cuedeck/cards/: card0000.md  card0002.md  card0009.md  card0010.md  card0023.md  card0026.md  card0031.md  card0033.md  card0037.md  card0043.md  card0044.md  card0045.md  card0047.md  card0060.md  card0067.md  card0068.md  card0073.md  card0078.md  card0081.md  card0095.md  card0098.md  card0100.md  card0101.md  card0103.md  card0110.md  card0111.md  card0114.md  card0115.md  card0121.md  card0123.md  card0124.md  card0125.md  card0129.md  card0131.md  card0133.md  card0134.md  card0135.md  card0136.md  card0139.md  card0142.md  (+432 more)
crates/cue_core/benches/test_data/scan_1000_warm/.cue/: metadata.db
crates/cue_core/benches/test_data/scan_1000_warm/.cuedeck/cards/: card0004.md  card0006.md  card0011.md  card0016.md  card0020.md  card0021.md  card0032.md  card0039.md  card0041.md  card0048.md  card0049.md  card0059.md  card0069.md  card0070.md  card0080.md  card0082.md  card0088.md  card0093.md  card0102.md  card0104.md  card0105.md  card0106.md  card0107.md  card0108.md  card0109.md  card0112.md  card0113.md  card0116.md  card0117.md  card0118.md  card0119.md  card0120.md  card0122.md  card0126.md  card0127.md  card0128.md  card0130.md  card0132.md  card0137.md  card0138.md  (+427 more)
crates/cue_core/benches/test_data/scan_100_10pct/.cue/: metadata.db
crates/cue_core/benches/test_data/scan_100_10pct/.cuedeck/cards/: card0000.md  card0001.md  card0002.md  card0003.md  card0004.md  card0005.md  card0006.md  card0007.md  card0008.md  card0009.md  card0013.md  card0014.md  card0015.md  card0022.md  card0024.md  card0042.md  card0052.md  card0053.md  card0054.md  card0055.md  card0056.md  card0057.md  card0058.md  card0062.md  card0063.md  card0064.md  card0066.md  card0074.md  card0075.md  card0076.md  card0086.md  card0089.md  card0091.md  card0092.md  card0094.md
crates/cue_core/benches/test_data/scan_100_cold/.cue/: metadata.db
crates/cue_core/benches/test_data/scan_100_cold/.cuedeck/cards/: card0001.md  card0005.md  card0007.md  card0025.md  card0028.md  card0029.md  card0034.md  card0035.md  card0046.md  card0050.md  card0051.md  card0065.md  card0072.md  card0077.md  card0084.md  card0085.md  card0087.md  card0090.md  card0096.md  card0097.md  card0099.md
crates/cue_core/benches/test_data/scan_100_warm/.cue/: metadata.db
crates/cue_core/benches/test_data/scan_100_warm/.cuedeck/cards/: card0003.md  card0008.md  card0012.md  card0017.md  card0018.md  card0019.md  card0027.md  card0030.md  card0036.md  card0038.md  card0040.md  card0061.md  card0071.md  card0079.md  card0083.md
crates/cue_core/benches/test_data/workspace_100/.cuedeck/docs/: doc002.md  doc003.md  doc005.md  doc008.md  doc011.md  doc013.md  doc017.md  doc021.md  doc025.md  doc030.md  doc032.md  doc033.md  doc036.md  doc037.md  doc043.md  doc044.md  doc046.md  doc047.md  doc051.md  doc054.md  doc055.md  doc056.md  doc061.md  doc065.md  doc070.md  doc075.md  doc079.md  doc080.md  doc082.md  doc083.md  doc086.md  doc087.md  doc090.md  doc092.md  doc094.md  doc096.md  doc098.md
crates/cue_core/benches/test_data/workspace_1000/.cuedeck/docs/: doc001.md  doc006.md  doc007.md  doc009.md  doc010.md  doc012.md  doc014.md  doc015.md  doc022.md  doc024.md  doc026.md  doc034.md  doc035.md  doc039.md  doc041.md  doc042.md  doc045.md  doc048.md  doc049.md  doc050.md  doc052.md  doc053.md  doc057.md  doc059.md  doc062.md  doc063.md  doc067.md  doc068.md  doc069.md  doc071.md  doc072.md  doc074.md  doc076.md  doc078.md  doc081.md  doc091.md  doc093.md  doc095.md  doc100.md  doc101.md  (+898 more)
crates/cue_core/src/: agent_fs.rs  batch.rs  cache.rs  code_search.rs  consistency.rs  context.rs  doctor.rs  embedding_cache.rs  embeddings.rs  engine.rs  graph.rs  graph_viz.rs  lib.rs  query_lang.rs  task_filters.rs  task_graph.rs  tasks.rs  tasks.rs_new_functions
crates/cue_core/src/db/: migration.rs  mod.rs  schema.sql
crates/cue_core/tests/: benchmark.rs  engine_migration_test.rs  large_file_audit.rs  memory_usage.rs  search_filters_test.rs  test_graph.rs  test_pagination.rs  test_parser.rs  test_task_graph.rs
crates/cue_mcp/: Cargo.toml
crates/cue_mcp/src/: lib.rs  lib.rs_handlers  lib.rs_new_handlers  main.rs  week4_tools.rs
crates/cue_mcp/tests/: integration_mcp_filters.rs  test_list_tasks_filters.rs  test_mcp_pagination.rs
crates/cue_sync/: Cargo.toml
crates/cue_sync/src/: config.rs  doc.rs  engine.rs  lib.rs  offline.rs  protocol.rs  resolver.rs
crates/cue_test_helpers/: Cargo.toml
crates/cue_test_helpers/src/: assertions.rs  cli.rs  lib.rs  logging.rs  workspace.rs
(+113 files in other folders)
