[package]
name = "cue_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cue_common = { path = "../cue_common" }
cue_config = { path = "../cue_config" }
anyhow.workspace = true
tracing.workspace = true
sha2.workspace = true
walkdir.workspace = true
chrono = "0.4"
serde.workspace = true
serde_yaml.workspace = true
regex.workspace = true
rand.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_fs.workspace = true
predicates.workspace = true
