[package]
name = "cue_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["embeddings", "graph-viz"]
embeddings = ["dep:fastembed"]
graph-viz = ["dep:petgraph"]

[dependencies]
cue_common = { path = "../cue_common" }
cue_config = { path = "../cue_config" }
anyhow.workspace = true
tracing.workspace = true
sha2.workspace = true
walkdir.workspace = true
chrono = "0.4"
serde.workspace = true
serde_yaml.workspace = true
regex.workspace = true
rand.workspace = true
serde_json.workspace = true
fastembed = { version = "4.9.1", optional = true }
petgraph = { version = "0.6", optional = true }
rayon.workspace = true
bincode.workspace = true
rusqlite.workspace = true
memmap2.workspace = true
schemars = { workspace = true, features = ["preserve_order"] }
lazy_static.workspace = true
base64 = "0.22"

[dev-dependencies]
cue_test_helpers = { path = "../cue_test_helpers" }
assert_fs.workspace = true
predicates.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
