[package]
name = "cue_mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cue_mcp"
path = "src/main.rs"

[dependencies]
cue_common = { path = "../cue_common" }
cue_core = { path = "../cue_core" }
cue_config = { path = "../cue_config" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
once_cell = "1.19"

[dev-dependencies]
cue_test_helpers = { path = "../cue_test_helpers" }
assert_fs = "1.0"
regex = "1.10"
