[package]
name = "cue_sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# CRDT library - PINNED to exact version for wire format compatibility
automerge = "=0.5.0"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# WebSocket for P2P sync
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json.workspace = true
bincode.workspace = true
toml.workspace = true

# Shared crates
cue_common = { path = "../cue_common" }
cue_config = { path = "../cue_config" }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time utilities
chrono.workspace = true

# Hashing
sha2.workspace = true

[dev-dependencies]
cue_test_helpers = { path = "../cue_test_helpers" }
assert_fs.workspace = true
predicates.workspace = true
tokio-test = "0.4"
